tests/ui/loops/loop-else-break-with-value.stderr
error: `loop...else` loops are not supported
  --> $DIR/loop-else-break-with-value.rs:5:7
   |
LL |       let Some(1) = loop {
   |                     ---- `else` is attached to this loop
...
LL |       } else {
   |  _______^
LL | |
LL | |
LL | |         return;
LL | |     };
   | |_____^
   |
   = note: consider moving this `else` clause to a separate `if` statement and use a `bool` variable to control if it should run

error: aborting due to previous error

